bk_ida/gccida/g2/find_reloads_address
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5033:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5038:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5046:4: error: expected ';' after expression
rtx memloc; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5046:5: error: use of undeclared identifier 'memloc'; did you mean 'malloc'?
rtx memloc; // rax 
    ^~~~~~
    malloc
/usr/include/malloc.h:38:14: note: 'malloc' declared here
extern void *malloc (size_t __size) __THROW __attribute_malloc__ __wur;
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5048:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5049:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v18; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5059:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v30; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5061:4: error: expected ';' after expression
rtx v32; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5061:5: error: use of undeclared identifier 'v32'
rtx v32; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5062:4: error: expected ';' after expression
rtx v33; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5062:5: error: use of undeclared identifier 'v33'
rtx v33; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5064:4: error: expected ';' after expression
rtx v35; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5064:5: error: use of undeclared identifier 'v35'
rtx v35; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5071:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5071:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5077:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5077:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5078:4: error: expected ';' after expression
rtx v49; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/reload.c:5078:5: error: use of undeclared identifier 'v49'
rtx v49; // r12 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_reloads_address/src/obj/reload.o] Error 1
